--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "game",
+  "name": "townsbattle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skanes17.github.io/townsbattle",
+  "homepage": "https://skanes17.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
